--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,16 @@
 
-.gallery{
-    list-style: none;
-    display: flex;
-    gap: 25px;
-     width: 1128px; 
-}
 
+.gallery {
+    width: 1440px;
+    height: 696px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    padding: 24px 156px;
+    gap: 24px 24px;
+    list-style: none;
+    background-color: #FFF;
+  }
+  .gallery-image{
+    width: 300px;
+  }
